Handtrack.js support

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,10 @@
 
     </head>
     <body>
+        <div>
+            <button id="video-button" disabled>Play WebCam</button>
+            <p id="updatenote"></p>
+        </div>
         <div id="root">
             
         </div>
