Import du module custom, préparation des zones de sélection, nettoyage de l'interface

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,12 +6,6 @@
 
     </head>
     <body>
-        <div>
-            <button id="video-button" disabled>Play WebCam</button>
-            <p id="updatenote"></p>
-        </div>
-        <div id="root">
-            
-        </div>
+        <div id="root"></div>
     </body>
 </html>
